eclipse-workspace/Surya Dev Org/src/objects/Loan__c.object
<CustomObject>
    <fields>
        <fullName>Account_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Number</label>
        <referenceTo>Account_Info__c</referenceTo>
        <relationshipLabel>Loan</relationshipLabel>
        <relationshipName>Loan</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Credit_History__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Credit History</label>
        <referenceTo>Credit_History__c</referenceTo>
        <relationshipLabel>Loan</relationshipLabel>
        <relationshipName>Loan</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Loan_Holder_Name__c</fullName>
        <label>Loan Holder Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Type__c</fullName>
        <label>Loan Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Auto Loan</fullName>
                </value>
                <value>
                    <fullName>Mortgage Loan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Loan</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account_Number__c</columns>
        <columns>Credit_History__c</columns>
        <columns>Loan_Holder_Name__c</columns>
        <columns>Loan_Type__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Banking_List_View</fullName>
        <columns>NAME</columns>
        <columns>Loan_Holder_Name__c</columns>
        <columns>Account_Number__c</columns>
        <columns>Loan_Type__c</columns>
        <filterScope>Mine</filterScope>
        <label>Banking List View</label>
    </listViews>
    <nameField>
        <displayFormat>LN-{000000}</displayFormat>
        <label>Loan Account Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loan</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>